<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_feed"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/feed_music"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_music"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_albums"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_albums"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_releases"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_releases"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_my_events"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_my_events"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_your_recs"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_your_recs"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feed_events_near_me"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nav_events_near_me"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>